--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>darwinwin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="assets/favicon.ico">
   <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
   <div id="app_container">
     <script type="module">
-      const server_url = document.location.hostname == 'localhost' || 'http://localhost:21110/';
+      const server_url = 'http://localhost:21110/';
 
       function load_url(url, callback, payload, failure_callback) {
         var xmlhttp;
