Added Actor manual actions. POST request returns empty body and does not seem to move actor. Troubleshooting was fruitless, possible bug at backend or lack of neurons in my brain.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,14 +17,11 @@
       <div class="stats-body">
         <div class="stats-subsection-header">INFO</div>
         <div id="stats-info" class="stats-subsection">
-          <div id="stats-info-labels" class="stats-info-column"></div>
-          <div id="stats-info-values" class="stats-info-column"></div>
+          <div id="stats-info-labels" class="stats-subsection-column"></div>
+          <div id="stats-info-values" class="stats-subsection-column"></div>
         </div>
         <div class="stats-subsection-header">OPTIONS</div>
-        <div id="stats-options" class="stats-subsection">
-          <div id="stats-options-labels" class="stats-options-column"></div>
-          <div id="stats-options-buttons" class="stats-options-column"></div>
-        </div>
+        <div id="stats-options" class="stats-subsection"></div>
       </div>
     </div>
   </div>
