View Cone Wird dynamisch aus der js datei erstellt. Positions und Viewcone Size ist hardgecoded.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,16 +26,7 @@
     </div>
     <div id="view-cone-container" class="view-cone-container">
       <div class="view-cone-header">VIEW CONE</div>
-      <div class="view-cone-grid">
-        <div class="view-cone-tile" style="grid-row: 1; grid-column: 2;">Tile 1</div>
-        <div class="view-cone-tile" style="grid-row: 2; grid-column: 1;">Tile 2</div>
-        <div class="view-cone-tile" style="grid-row: 2; grid-column: 2;">Tile 3</div>
-        <div class="view-cone-tile" style="grid-row: 2; grid-column: 3;">Tile 4</div>
-        <div class="view-cone-tile" style="grid-row: 3; grid-column: 1;">Tile 5</div>
-        <div class="view-cone-tile" style="grid-row: 3; grid-column: 2;">Tile 6</div>
-        <div class="view-cone-tile" style="grid-row: 3; grid-column: 3;">Tile 7</div>
-        <div class="view-cone-tile" style="grid-row: 4; grid-column: 2;">Tile 8</div>
-      </div>
+      <div id="view-cone-grid" class="view-cone-grid"></div>
     </div>
   </div>
 </body>
