fixing cors laoding error with js file, making colors nicer to look at

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app_container">
-    <script type="module" src="api.js"></script>
+    <script type="text/javascript" language="javascript" src="api.js"></script>
     <div id="level-container" class="level-container"></div>
     <div id="stats-container" class="stats-container">
       <div class="stats-header">STATS</div>
