--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,22 +11,32 @@
 <body>
   <div id="app_container">
     <script type="text/javascript" language="javascript" src="api.js"></script>
-    <div id="level-container" class="level-container"></div>
-    <div id="stats-container" class="stats-container">
-      <div class="stats-header">STATS</div>
-      <div class="stats-body">
-        <div class="stats-subsection-header">INFO</div>
-        <div id="stats-info" class="stats-subsection">
-          <div id="stats-info-labels" class="stats-subsection-column"></div>
-          <div id="stats-info-values" class="stats-subsection-column"></div>
-        </div>
-        <div class="stats-subsection-header">OPTIONS</div>
-        <div id="stats-options" class="stats-subsection"></div>
-      </div>
+    <div id="control-panel" class="control-panel">
+      <button id="level-generate-button">Generate Level</button>
+      <span></span>
+      <button id="ai-step-button">Trigger AI Step</button>
+      <span></span>
+      <button id="training-start-button">Start Training</button>
+      <button id="training-stop-button">Stop Training</button>
     </div>
-    <div id="view-cone-container" class="view-cone-container">
-      <div class="view-cone-header">VIEW CONE</div>
-      <div id="view-cone-grid" class="view-cone-grid"></div>
+    <div class="level-view">
+      <div id="level-container" class="level-container"></div>
+      <div id="stats-container" class="stats-container">
+        <div class="stats-header">STATS</div>
+        <div class="stats-body">
+          <div class="stats-subsection-header">INFO</div>
+          <div id="stats-info" class="stats-subsection">
+            <div id="stats-info-labels" class="stats-subsection-column"></div>
+            <div id="stats-info-values" class="stats-subsection-column"></div>
+          </div>
+          <div class="stats-subsection-header">OPTIONS</div>
+          <div id="stats-options" class="stats-subsection"></div>
+        </div>
+      </div>
+      <div id="view-cone-container" class="view-cone-container">
+        <div class="view-cone-header">VIEW CONE</div>
+        <div id="view-cone-grid" class="view-cone-grid"></div>
+      </div>
     </div>
   </div>
 </body>
