Added AI step toggle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,8 @@
     <div id="control-panel" class="control-panel">
       <button id="level-generate-button">Generate Level</button>
       <span></span>
-      <button id="ai-step-button">Trigger AI Step</button>
+      <button id="ai-step-button">Single AI Step</button>
+      <button id="ai-step-start-button">Start AI Step</button>
       <span></span>
       <button id="training-start-button">Start Training</button>
       <button id="training-stop-button">Stop Training</button>
