Start and Stop Training button are now Toggle Training button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,7 @@
       <button id="ai-reset-brain-button">Reset Stats</button>
       <span></span>
       <button id="training-load-level-button">Load Training Level</button>
-      <button id="training-start-button">Start Training</button>
-      <button id="training-stop-button">Stop Training</button>
+      <button id="training-toggle-button">Start Training</button>
     </div>
     <div class="level-view">
       <div id="level-container" class="level-container"></div>
