View Cone is done.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,9 +37,13 @@
           <div id="stats-options" class="stats-subsection"></div>
         </div>
       </div>
-      <div id="view-cone-container" class="view-cone-container">
-        <div class="view-cone-header">VIEW CONE</div>
-        <div id="view-cone-grid" class="view-cone-grid"></div>
+      <div id="view-cone-container-0" class="view-cone-container">
+        <div class="view-cone-header">.viewcone</div>
+        <div id="view-cone-grid-0" class="view-cone-grid"></div>
+      </div>
+      <div id="view-cone-container-1" class="view-cone-container">
+        <div class="view-cone-header">.grid</div>
+        <div id="view-cone-grid-1" class="view-cone-grid"></div>
       </div>
     </div>
   </div>
