--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
       <button id="ai-reset-brain-button" onclick="postResetStatsRequest()">Reset Stats</button>
       <span></span>
       <button id="training-load-level-button" onclick="postLoadTrainingLevelRequest()">Load Training Level</button>
-      <button id="training-toggle-button" onclick="startTraining()">Start Training</button>
+      <button id="training-toggle-button" class="training-button">Start Training</button>
     </div>
     <div class="level-view">
       <div id="level-container" class="level-container"></div>
