--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>darwinwin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="assets/favicon.ico">
+  <link rel="icon" type="image/png" href="assets/icons/favicon.ico">
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
