--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
             <div id="stats-info-labels" class="stats-subsection-column"></div>
             <div id="stats-info-values" class="stats-subsection-column"></div>
           </div>
-          <div class="stats-subsection-header">OPTIONS</div>
+          <!---<div class="stats-subsection-header">OPTIONS</div>!-->
           <div id="stats-options" class="stats-subsection"></div>
         </div>
       </div>
@@ -43,6 +43,7 @@
         <div id="view-cone-grid" class="view-cone-grid"></div>
       </div>
     </div>
+    <div class="fgh">Watch the AI-Actors (white circles) scurry the world. <br>They are being trained in the background. When one of them dies, the actor gets replaced with the newest trained version. <br>You can click on a circle to see the actor's stats and its viewcone or on a tile to see its content.</div>
   </div>
 </body>
 </html>
