--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,13 @@
         <div id="view-cone-grid" class="view-cone-grid"></div>
       </div>
     </div>
-    <div class="fgh">Watch the AI-Actors (white circles) scurry the world. <br>They are being trained in the background. When one of them dies, the actor gets replaced with the newest trained version. <br>You can click on a circle to see the actor's stats and its viewcone or on a tile to see its content.</div>
+    <div class="fgh">The white circles are AI-Actors searching for food and trying to survive.<br>
+      Their Neuronal-Network-Brains are still being trained in the background to update any Actor that ran out of energy and died, with the newest brain.<br><br>
+      The more different food items the actor digests the higher the energy-reward. But sugar (🍭) needs to be dragged ashore first.<br>      
+      The Actor's brains decides on basis of their viewcone and statitics.<br>
+      Click on an Actor or Tile to see details.<br><br>
+      
+      <a>Project by Malin Lindner. Participants: Malin Lindner, Jan Lattenkamp, Marvin Domnick</a></div>
   </div>
 </body>
 </html>
