design changes for iteration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,14 @@
       <button id="training-start-button" onclick="startTraining()">Start Training</button>
       <button id="training-stop-button" onclick="stopTraining()">Stop Training</button>
     </div>
+    
+    <div class="fgh">The white circles represent AI-Actors searching for food and trying to survive in the simulated ecosystem.<br>
+      Their Neuronal-Network-Brains are still being trained in the background to update any Actor that ran out of energy and died, with the newest best generation.<br><br>
+      If the actor is digesting multiple different food types they‘ll get a higher energy-reward. However, sugar (🍭) only appears under water, but cannot be consumed there. So, sugar needs to be dragged to land first, before in can be consumed.<br>      
+      The Actor's brains decides on basis of their viewcone (contains tiles that are visible from their current position and orientation) and their internal statistics (food, energy, air levels).<br>
+      Click on an Actor or Tile to reveal more information.<br>      
+      <a>Project by Malin Lindner. Participants: Malin Lindner, Jan Lattenkamp, Marvin Domnick</a>
+    </div>
     <div class="level-view">
       <div id="level-container" class="level-container"></div>
       <div id="stats-container" class="stats-container">
@@ -43,13 +51,6 @@
         <div id="view-cone-grid" class="view-cone-grid"></div>
       </div>
     </div>
-    <div class="fgh">The white circles are AI-Actors searching for food and trying to survive.<br>
-      Their Neuronal-Network-Brains are still being trained in the background to update any Actor that ran out of energy and died, with the newest brain.<br><br>
-      The more different food items the actor digests the higher the energy-reward. But sugar (🍭) needs to be dragged ashore first.<br>      
-      The Actor's brains decides on basis of their viewcone and statitics.<br>
-      Click on an Actor or Tile to see details.<br><br>
-      
-      <a>Project by Malin Lindner. Participants: Malin Lindner, Jan Lattenkamp, Marvin Domnick</a></div>
   </div>
 </body>
 </html>
